welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:4: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
  case (speed && isBirthday) ==true <65 => return 0
                             ^caughtSpeeding:5: error: not found: value &&
  case speed && isBirthday==true <=85 && speed>65  => return 1
                                      ^caughtSpeeding:6: error: not found: value &&
  case speed && isBirthday==true >86 => return 2
             ^caughtSpeeding:8: error: not found: value &&
  case speed && isBirthday==false <60 => return 0
             ^caughtSpeeding:9: error: not found: value &&
  case speed && isBirthday==false <=80 && speed>60  => return 1
                                       ^caughtSpeeding:10: error: not found: value &&
  case speed && isBirthday==false >81 => return 2
             ^